fix : removed overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   font-size: 17px;
+  overflow-x: hidden;
 }
 
 p,
